Complete rewrite: proper HubSpot UI Extensions architecture
- Added serverless functions (bookingApi.js) for all HubSpot API operations
- Rewrote DealCard with booking form, slot management, proper runServerless calls
- Rewrote ContactCard and CompanyCard to show related bookings
- Rewrote GridView calendar with 50-day view, filters, status legend
- Updated all extension configs for proper HubSpot registration
- Added app.json with proper scopes and extension registration
- All components now use HubSpot's native UI components

Architecture:
- UI Extensions call serverless functions via runServerless()
- Serverless functions use @hubspot/api-client for CRM operations
- Full integration with Deals, Contacts, Companies, Products
- Status flow: On Hold → Sold → Configuration → Delivered

--- a/src/app/app.functions/package.json
+++ b/src/app/app.functions/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "calendar-sales-functions",
+  "name": "rsm-booking-functions",
   "version": "1.0.0",
-  "description": "Serverless functions for Calendar Sales HubSpot app",
+  "description": "Serverless functions for RSM Booking app",
+  "main": "bookingApi.js",
   "dependencies": {
-    "@hubspot/serverless-runtime-lib": "^latest"
+    "@hubspot/api-client": "^11.0.0"
   }
 }
